tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions14(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions14.ts(2,13): error TS1125: Hexadecimal digit expected.
unicodeExtendedEscapesInRegularExpressions14.ts(2,18): error TS1508: Unexpected '}'. Did you mean to escape it with backslash?


==== unicodeExtendedEscapesInRegularExpressions14.ts (2 errors) ====
    // Shouldn't work, negatives are not allowed.
    var x = /\u{-DDDD}/gu;
                
!!! error TS1125: Hexadecimal digit expected.
                     ~
!!! error TS1508: Unexpected '}'. Did you mean to escape it with backslash?
    